GNU bug report logs - #11742
without-x build fails due to undefined tip_frame

Previous Next

Package: emacs;

Reported by: Glenn Morris <rgm <at> gnu.org>

Date: Tue, 19 Jun 2012 16:38:02 UTC

Severity: important

Found in version 24.1.50

Done: Chong Yidong <cyd <at> gnu.org>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 11742 in the body.
You can then email your comments to 11742 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-gnu-emacs <at> gnu.org:
bug#11742; Package emacs. (Tue, 19 Jun 2012 16:38:02 GMT) Full text and rfc822 format available.

Message #3 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Glenn Morris <rgm <at> gnu.org>
To: submit <at> debbugs.gnu.org
Subject: without-x build fails due to undefined tip_frame
Date: Tue, 19 Jun 2012 12:34:27 -0400
Package: emacs
Version: 24.1.50

The current trunk fails to build on GNU/Linux since 2012/06/19, if
configured --without-x:

xdisp.c: In function 'x_consider_frame_title':
xdisp.c:11000: error: 'tip_frame' undeclared (first use in this function)
xdisp.c:11000: error: (Each undeclared identifier is reported only once
xdisp.c:11000: error: for each function it appears in.)
xdisp.c:11036: warning: implicit declaration of function 'x_implicitly_set_name'

Presumably due to this:

2012-06-19  Chong Yidong  <cyd AT gnu.org>

  * xdisp.c (x_consider_frame_title): Do not condition on HAVE_WINDOW_SYSTEM,
  since tty frames can be explicitly named.




bug closed, send any further explanations to 11742 <at> debbugs.gnu.org and Glenn Morris <rgm <at> gnu.org> Request was from Glenn Morris <rgm <at> gnu.org> to control <at> debbugs.gnu.org. (Fri, 22 Jun 2012 20:20:02 GMT) Full text and rfc822 format available.

bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Sat, 21 Jul 2012 11:24:04 GMT) Full text and rfc822 format available.

bug unarchived. Request was from Reuben Thomas <rrt <at> sc3d.org> to control <at> debbugs.gnu.org. (Fri, 27 Jul 2012 23:59:02 GMT) Full text and rfc822 format available.

Did not alter fixed versions and reopened. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Sat, 28 Jul 2012 00:00:01 GMT) Full text and rfc822 format available.

Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#11742; Package emacs. (Sat, 28 Jul 2012 00:01:02 GMT) Full text and rfc822 format available.

Message #14 received at 11742 <at> debbugs.gnu.org (full text, mbox):

From: Reuben Thomas <rrt <at> sc3d.org>
To: 11742 <at> debbugs.gnu.org
Cc: Glenn Morris <rgm <at> gnu.org>
Subject: Fwd: tip_frame bug has resurfaced
Date: Sat, 28 Jul 2012 00:53:37 +0100
Building from bazaar as of now, there's another instance of an
unguarded tip_frame in xdisp.c:

xdisp.c: In function ‘init_iterator’:
xdisp.c:2739:32: error: ‘tip_frame’ undeclared (first use in this function)
xdisp.c:2739:32: note: each undeclared identifier is reported only
once for each function it appears in
make[1]: *** [xdisp.o] Error 1

--
http://rrt.sc3d.org




Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#11742; Package emacs. (Sat, 28 Jul 2012 08:09:01 GMT) Full text and rfc822 format available.

Message #17 received at 11742 <at> debbugs.gnu.org (full text, mbox):

From: Eli Zaretskii <eliz <at> gnu.org>
To: Reuben Thomas <rrt <at> sc3d.org>
Cc: 11742 <at> debbugs.gnu.org
Subject: Re: bug#11742: Fwd: tip_frame bug has resurfaced
Date: Sat, 28 Jul 2012 11:01:35 +0300
> Date: Sat, 28 Jul 2012 00:53:37 +0100
> From: Reuben Thomas <rrt <at> sc3d.org>
> 
> Building from bazaar as of now, there's another instance of an
> unguarded tip_frame in xdisp.c:
> 
> xdisp.c: In function ‘init_iterator’:
> xdisp.c:2739:32: error: ‘tip_frame’ undeclared (first use in this function)
> xdisp.c:2739:32: note: each undeclared identifier is reported only
> once for each function it appears in
> make[1]: *** [xdisp.o] Error 1

Sorry, you are right.  Should be fixed in trunk revision 109242.





bug closed, send any further explanations to 11742 <at> debbugs.gnu.org and Glenn Morris <rgm <at> gnu.org> Request was from Chong Yidong <cyd <at> gnu.org> to control <at> debbugs.gnu.org. (Sat, 28 Jul 2012 10:52:02 GMT) Full text and rfc822 format available.

bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Sat, 25 Aug 2012 11:24:03 GMT) Full text and rfc822 format available.

This bug report was last modified 12 years and 239 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.