Fix --without-x build.

src/xdisp.c (init_iterator): Don't reference tip_frame in a build
 --without-x.  (Bug#11742)